--- a/html-css/index.html
+++ b/html-css/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <header>
-     <h1>vai ser uma imagem aqui</h1>
+     <img class src="imagem2 logo.png" alt="tu esta sem internet"
+     width="100"
+     height="100">
       <ul>
          <li>Estudante de Programação </li>
          <li>Python</li>
